[gd_scene load_steps=3 format=3 uid="uid://c8jx3vn5qwm4r"]

[ext_resource type="Script" uid="uid://cdfpo63r6gyys" path="res://scripts/GameUI.gd" id="1_game_ui"]
[ext_resource type="Script" uid="uid://dii52dgcmfo5w" path="res://scripts/HealthBar.gd" id="2_health_bar"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_ui")

[node name="TracksContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HitTrack" type="ColorRect" parent="TracksContainer"]
layout_mode = 0
offset_top = 100.0
offset_right = 1152.0
offset_bottom = 200.0
color = Color(1, 0.3, 0.3, 0.3)

[node name="HitLabel" type="Label" parent="TracksContainer/HitTrack"]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "HIT ‚öîÔ∏è"

[node name="GuardTrack" type="ColorRect" parent="TracksContainer"]
layout_mode = 0
offset_top = 220.0
offset_right = 1152.0
offset_bottom = 320.0
color = Color(0.3, 0.3, 1, 0.3)

[node name="GuardLabel" type="Label" parent="TracksContainer/GuardTrack"]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 1, 1)
text = "GUARD üõ°Ô∏è"

[node name="DodgeTrack" type="ColorRect" parent="TracksContainer"]
layout_mode = 0
offset_top = 340.0
offset_right = 1152.0
offset_bottom = 440.0
color = Color(0.3, 1, 0.3, 0.3)

[node name="DodgeLabel" type="Label" parent="TracksContainer/DodgeTrack"]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "DODGE üí®"

[node name="JudgmentLine" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 100.0
offset_right = 154.0
offset_bottom = 440.0
color = Color(1, 1, 1, 0.8)

[node name="NotesContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="JudgmentContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BossHealthBar" type="Control" parent="."]
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 1132.0
offset_bottom = 50.0
script = ExtResource("2_health_bar")
max_value = 1000.0
current_value = 1000.0
bar_color = Color(1, 0.1, 0.1, 1)
label_text = "BOSS"

[node name="BackgroundRect" type="ColorRect" parent="BossHealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="BarRect" type="ColorRect" parent="BossHealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.1, 0.1, 1)

[node name="Label" type="Label" parent="BossHealthBar"]
layout_mode = 0
offset_left = 10.0
offset_top = 7.0
offset_right = 100.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "BOSS"

[node name="ValueLabel" type="Label" parent="BossHealthBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -10.0
offset_right = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "1000 / 1000"
horizontal_alignment = 2

[node name="BossEnergyBar" type="Control" parent="."]
anchors_preset = 0
offset_left = 20.0
offset_top = 55.0
offset_right = 1132.0
offset_bottom = 75.0
script = ExtResource("2_health_bar")
bar_color = Color(1, 1, 0, 1)
label_text = "ENERGY"

[node name="BackgroundRect" type="ColorRect" parent="BossEnergyBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="BarRect" type="ColorRect" parent="BossEnergyBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0, 1)

[node name="Label" type="Label" parent="BossEnergyBar"]
layout_mode = 0
offset_left = 10.0
offset_right = 100.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Shield"

[node name="ValueLabel" type="Label" parent="BossEnergyBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -10.0
offset_right = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "100 / 100"
horizontal_alignment = 2

[node name="PlayerHealthBar" type="Control" parent="."]
anchors_preset = 0
offset_left = 20.0
offset_top = 620.0
offset_right = 1132.0
offset_bottom = 650.0
script = ExtResource("2_health_bar")
bar_color = Color(0.3, 1, 0.3, 1)
label_text = "PLAYER"

[node name="BackgroundRect" type="ColorRect" parent="PlayerHealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="BarRect" type="ColorRect" parent="PlayerHealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 1, 0.3, 1)

[node name="Label" type="Label" parent="PlayerHealthBar"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 100.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 20
text = "PLAYER"

[node name="ValueLabel" type="Label" parent="PlayerHealthBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -10.0
offset_right = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "100 / 100"
horizontal_alignment = 2
